# mcp-servers

./: AGENTS.md  Makefile  PUBLISHING.md  README.md  example.env
.github/workflows/: publish-mcp-example.yml  test-mcp-servers.yml
my-mcp/: pyproject.toml
my-mcp/servers/websearch/: server.py
scripts/: release.py
servers/_template/: README.md  pyproject.toml
servers/_template/src/echo_server/: main.py
servers/_template/tests/: test_tools.py
servers/example/: pyproject.toml
