[project]
name = "my-mcp-servers"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.13.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "pydantic>=2.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_mcp_servers"]

[tool.hatch.build.targets.editable]
packages = ["src/my_mcp_servers"]
