[project]
name = "mcp-echo-server"
version = "0.1.0"
description = "__DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "__AUTHOR__" }]
keywords = ["mcp", "model-context-protocol", "template"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp[cli]>=1.13.0",
]

[project.scripts]
mcp-echo-server = "echo_server.main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_server"]

[tool.hatch.build.targets.editable]
packages = ["src/echo_server"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
  "black>=24.0",
]

